<resources>
    <string name="app_name">Shoe Store</string>
    <string name="action_logout">Logout</string>

    <string name="username_hint">Enter your username</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="create_button">Create Account</string>



    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome to our Shoe Listing app we hope you can find what ever you need over here</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">On the next screen you can view all the shoes listed and you can add more with a click of a button</string>
    <string name="to_shoes_list">to Shoes List</string>
    <string name="shoe_desc">Description: %1$s</string>
    <string name="shoe_size">Size: %1$s</string>
    <string name="shoe_model">%1$s</string>
    <string name="shoe_company">Company: %1$s</string>
    <string name="add_your_favorite_shoe">Add your favorite shoe</string>
    <string name="enter_shoe_model_name">Enter shoe model name</string>
    <string name="enter_shoe_company">Enter shoe company</string>
    <string name="enter_shoe_size">Enter shoe Size</string>
    <string name="enter_shoe_description">Enter shoe description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="floating_button">Floating Button</string>
    <string name="a_shoe_image">a shoe image</string>
    <!-- Strings used for fragments for navigation -->

</resources>