<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.yasser.shoestore.ViewModel" />
    </data>

    <!--Here with the help of Constraint layout i can easily position
    each element any where in the layout in relation to each other unlike other
    ViewGroups there is no limitation
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />


        <!--Here i have used a LinearLayout to align each item vertically with
        ease as well as controlling visibility of all items altogether when logo
        animation finishes
        -->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/standard_dim"
            android:paddingEnd="@dimen/standard_dim"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <TextView
                android:id="@+id/username_label"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_margin"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/password_label"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_margin"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />


        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonLight"
            android:text="@string/login_button"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/create_button"
            style="@style/ButtonDark"
            android:visibility="gone"
            android:text="@string/create_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>