<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--Here with the help of Constraint layout i can easily position
    each element any where in the layout in relation to each other unlike other
    ViewGroups there is no limitation
    -->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InstructionsFragment">

    <TextView
        android:id="@+id/instructions_headline"
        style="@style/headline_text"
        android:text="@string/instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/instructions_text"
        style="@style/text_style"
        android:text="@string/instructions_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_headline" />

    <Button
        android:id="@+id/button_instructions"
        style="@style/Button"
        android:text="@string/to_shoes_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_text" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>