<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--Here with the help of Constraint layout i can easily position
    each element any where in the layout in relation to each other unlike other
    ViewGroups there is no limitation
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WelcomeFragment">


        <TextView
            android:id="@+id/welcome_headLine"
            style="@style/headline_text"
            android:text="@string/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_tv"
        style="@style/text_style"
        android:text="@string/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_headLine" />

    <Button
        android:id="@+id/button_welcome"
        style="@style/Button"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>